<resources>
    <string name="app_name">Ghaytah</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email Address</string>
    <string name="email_subject_hint">Your Email</string>
    <string name="password_subject_hint">Your Password</string>
    <string name="password">Password</string>
    <string name="welcome_title">Welcome to Ghaytah.</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="surname">Surname</string>
    <string name="surname_hint">Surname</string>
    <string name="create_a_password">Create a Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="create_account_now">Create Account Now</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="nav_search">Search</string>
    <string name="nav_fav">Favourite</string>
    <string name="nav_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="SearchTab">Search Tab</string>
    <string name="profileTab">Profile Tab</string>
    <string name="favoriteTab">Favourite Tab</string>
</resources>
