<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context="com.ghaytah.ghaytah.Login_screen">

    <LinearLayout
        android:id="@+id/rellay3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/email_address"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/email_subject_hint"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/first_name"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/first_name_hint"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/surname"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/surname_hint"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/create_a_password"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/password_subject_hint"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/mobile_number"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/your_mobile_number"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>


</LinearLayout>
    <Button
        android:id="@+id/btn_cretacct_now"
        android:layout_below="@+id/rellay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account_now"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>